# django-postgres

./: pyproject.toml
app/: settings.py  urls.py
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
