[tool.poetry]
name = "django-postgres"
version = "0.1.0"
description = ""
authors = ["francojposa <franco@francoposa.io>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
psycopg2-binary = "^2.8.5"
uvicorn = "^0.11.8"
whitenoise = "^5.2.0"
ipython = "^7.17.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
